<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">Clean Air</string>

    <!-- Setup -->
    <string name="setup_login">Login</string>
    <string name="setup_create_account">Create Account</string>
    <string name="setup_terms">Terms &amp; Conditions</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_summary">
        With the Cardiff Clean Air Project, we\'re working together for a better, healthier city.
    </string>
    <string name="location_title">Location Access Required</string>
    <string name="location_summary">
        We need access to your location so we can track which parts of Cardiff are the most polluted.
    </string>
    <string name="location_enable">Enable Location</string>
    <string name="bluetooth_title">Connecting the Sensors</string>
    <string name="bluetooth_summary">
        To connect the sensors, hold the pair button until the light starts blinking, then press pair bluetooth below.
    </string>
    <string name="bluetooth_pair">Pair Bluetooth</string>
    <string name="finished_title">You\'re all set</string>
    <string name="finished_summary">
        The app will now automatically connect to the sensors and get readings when you turn them on.
    </string>
    <string name="finished_enter">Let\'s Go</string>

    <!-- Login / Register -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_not_member">Don\'t have an account? Sign up</string>
    <string name="text_member">Have an account? Sign in</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Invalid Email or Password</string>
    <string name="existing_user">Already a member? Login</string>

    <!-- Readings -->
    <string name="noise">Noise</string>
    <string name="noise_measurement">dBA</string>
    <string name="air">Air Pollution</string>
    <string name="air_measurement">µg/m3</string>
    <string name="syncStatus">Sync Status</string>
    <string name="upToDate">Up To Date</string>
    <string name="connected">Connected</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
