<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setup.fragments.WelcomeFragment">

    <ImageView
            android:src="@drawable/ic_logo_gradient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

    <TextView
            android:text="@string/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            app:layout_constraintBottom_toTopOf="@+id/summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="4dp"
            style="@style/SetupTitle"/>

    <TextView
            android:text="@string/welcome_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/summary"
            app:layout_constraintEnd_toEndOf="@+id/button_login"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            android:layout_marginBottom="42dp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            style="@style/SetupSummary"/>

    <Button
            android:id="@+id/button_login"
            android:text="@string/setup_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="55dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/button_create_account"
            style="@style/GradientButton"/>

    <Button
            android:id="@+id/button_create_account"
            android:text="@string/setup_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="55dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/button_terms"
            style="@style/WhiteButton"/>

    <Button
            android:id="@+id/button_terms"
            android:text="@string/setup_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_borderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/BorderlessButton" android:layout_marginBottom="60dp"/>

</android.support.constraint.ConstraintLayout>