<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.fragments.LocationFragment">
            <TextView
                    android:text="Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/SetupTitle"
                    app:layout_constraintBottom_toTopOf="@+id/text_input_layout_email"
                    app:layout_constraintTop_toTopOf="parent"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="55dp" android:layout_marginStart="55dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@android:color/black" android:fontFamily="@font/poppins"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="42dp" app:layout_constraintBottom_toTopOf="@+id/button_login"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="55dp" android:layout_marginEnd="55dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black" android:fontFamily="@font/poppins"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_login"
                    android:text="@string/text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    style="@style/GradientButton" app:layout_constraintBottom_toTopOf="@+id/button_register"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="55dp" android:layout_marginEnd="55dp"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_register"
            android:text="@string/text_not_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_borderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/BorderlessButton" android:layout_marginBottom="60dp" android:textAlignment="center"
    />

</android.support.constraint.ConstraintLayout>